# kafka-mocker

./: Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yaml
scripts/: set-version.sh
src/kafka_mocker/: cli.py
tests/: test_cli.py
tests/expected-output/: cli-help.txt  cli-version.txt  cli-wrong-options.txt
