[project]
name = "kafka_mocker"
version = "0.0.1"
description = "Kafka Mock Messages Sender"
authors = [
    {name = "Siak Hooi",email = "siakhooi@gmail.com"}
]
keywords = [ "kafka" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities"
]

license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[project.urls]
homepage = "https://github.com/siakhooi/kafka-mocker"
repository = "https://github.com/siakhooi/kafka-mocker"
documentation = "https://github.com/siakhooi/kafka-mocker/wiki"
"Bug Tracker" = "https://github.com/siakhooi/kafka-mocker/issues"

[project.scripts]
kafka-mocker = 'kafka_mocker.cli:run'


[tool.poetry]
packages = [{include = "kafka_mocker", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
flake8 = "^7.2.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
